--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -5,7 +7,11 @@
 }
 
 body {
-    background-image: linear-gradient(130deg, hsl(273, 75%, 66%), hsl(240, 73%, 65%));
+    background-image: linear-gradient(180deg, hsl(273, 75%, 66%), hsl(240, 73%, 65%));
+    font-size: 14px;
+    font-family: 'Kumbh Sans', sans-serif;
+    width: 100vw;
+    height: 100vh;
 }
 
 .container {
@@ -13,7 +19,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     position: fixed;
-    width: 70%;
+    width: 60%;
     height: 70%;
     background-color: #fff;
     border-radius: 15px;
@@ -24,43 +30,85 @@ body {
 .left {
     width: 50%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.right {
-    width: 50%;
-    height: inherit;
-}
-
-img {
-    width: 100%;
-    height: 100%;
-}
-
-.box-woman {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     position: relative;
 }
 
 .woman {
-    position: relative;
+    position: absolute;
+    top: 3rem;
     left: -4rem;
-    z-index: -1;
+    width: 100%;
+    z-index: 0;
 }
 
 .box {
-    width: 15rem;
-    height: 12rem;
-    position: absolute;
-    left: -8.5rem;
-    top: 8.5rem;
+    position: relative;
+    top: 11.5rem;
+    left: -7.5rem;
+    z-index: 1;
 }
 
 .blur {
+    width: 509px;
+    width: 920px;
+    height: 100%;
+    background-image: url(./images/bg-pattern-desktop.svg);
+    background-repeat: no-repeat;
+    background-position: 1260% 65%;
+    z-index: -1;
+}
+
+.right {
+    width: 50%;
+    height: 100%;
+    padding: 40px;
+    z-index: 2;
+}
+
+h1 {
+    margin: 2rem 0;
+}
+
+button {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    padding: 1rem 0;
+    cursor: pointer;
+    border: none;
+    background: none;
+    font-family: 'Kumbh Sans', sans-serif;
+}
+
+li {
+    list-style: none;
+    border-bottom: 1px solid hsl(240, 5%, 91%);;
+}
+
+p {
+    display: none;
+    font-size: 12px;
+    font-weight: 400;
+    padding: 1rem;
+}
+
+h4:hover {
+    color: hsl(14, 88%, 65%);
+    font-weight: 700;
+}
+
+.text {
+    margin-top: 1rem;
+    width: 80%;
+}
+
+.show p {
+    display: contents;
+}
+
+.show h4 {
+    font-weight: 700;
 }
 
 .attribution {
