--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,6 @@ body {
     z-index: -1;
 }
 
-.mobile {
-    display: none;
-}
 
 .right {
     width: 50%;
@@ -127,18 +124,22 @@ h4:hover {
 @media only screen and (max-width: 460px) {
     .container {
         width: 90%;
-        display: block;
-        margin-top: 5rem;
+        margin-top: 3rem;
+        margin-bottom: 5rem;
     }
 
     .mobile {
-        display: block;
+        margin-bottom: 5rem;
+        width: 100%;
+        height: 30%;
+        position: absolute;
+        z-index: 200;
     }
 
     .mobile-woman {
         height: 100%;
         width: 100%;
-        background-image: url(./images/illustration-woman-online-mobile.svg);
+        background: url(./images/illustration-woman-online-mobile.svg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -158,6 +159,7 @@ h4:hover {
 
     .right {
         width: 100%;
+        height: 100%;
     }
 
     .text {
