--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ button {
     border: none;
     background: none;
     font-family: 'Kumbh Sans', sans-serif;
+    text-align: center;
 }
 
 li {
@@ -90,12 +91,14 @@ p {
     display: none;
     font-size: 12px;
     font-weight: 400;
-    padding: 1rem;
+}
+
+h4 {
+    font-weight: 400;
 }
 
 h4:hover {
     color: hsl(14, 88%, 65%);
-    font-weight: 700;
 }
 
 .text {
@@ -118,4 +121,72 @@ h4:hover {
 
 .attribution a {
     color: hsl(228, 45%, 44%);
+}
+
+.mobile {
+    display: none;
+}
+
+@media only screen and (max-width: 600px){
+    .container {
+        width: 90%;
+        height: 75%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        position: fixed;
+        margin-top: 3rem;
+    }
+
+    .right {
+        width: 100%;
+        height: 100%;
+        margin-top: 3rem;
+    }
+
+    .first {
+        width: 70%;
+        height: 40%;
+        background: url(./images/bg-pattern-mobile.svg);
+        background-repeat: no-repeat;
+        background-position: top center;
+        background-size: contain;
+        position: absolute;
+        top: 0;
+        right: 3.5rem;
+    }
+
+    .second {
+        width: 70%;
+        height: 40%;
+        position: absolute;
+        background: url(/images/illustration-woman-online-mobile.svg);
+        background-repeat: no-repeat;
+        background-position: top center;
+        background-size: contain;
+        top: -6rem;
+        right: 3.5rem;
+    }
+
+    .left {
+        display: none;
+    }
+
+    .text {
+        width: 100%;
+        margin-top: 2rem;
+    }
+
+    h1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    h4 {
+        font-size: .8rem;
+    }
+
+    p {
+        font-size: 75%;
+    }
 }
